--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "postinstall": "npm run build",
+    "start": "./node_modules/json-server/bin/index.js -s ./dist  --watch ./json-server-heroku/db.json -H $PORT",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -28,6 +29,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "json-server": "^0.14.0",
     "rxjs": "~6.2.0",
     "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
